added code to HTML file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,53 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>!DOCTYPE html : This declaration tells the browser what document type it should expect when it is opened.</li>
+     <li>Inside HTML tag, attribute lang="en" will state what language web page will be in. In this example "en" is for English.</li>
+          <li>The head element contains information about the webpage called Metadata.</li>
+          <li>Inside the head tag the following metadata tags can be found: Title, Style, Base, Link, Meta and Script.</li>
+          <li>Title element defines title for the webpage. This is required and important for Search Engine Optimization (SEO)</li>
+          <li>Style element defines the CSS styles associated with a website.</li>
+          <li>Base element defines the base URL for a webpage.</li>
+          <li>Link element connects an external resource to the HTML document.</li>
+          <li>Meta element defines metadata such as the character set, description, keywords, author, and viewport.</li>
+          <li>Script element embeds client-side scripts in the HTML document.</li>
+     <li>The body element represents the visible content shown to the user.</li>
+<li>Body element has many tags that can be used including h1 - h6 (level of heading), p (block of text), ul (unordered lists), ol (ordered lists), li (list items), img (info about images) which can include attributes ie. `src` (important - defines location) or `alt` (contains a text string that describes the appearance and functionality of the image), br (creates empty line or break between two blocks of content). </li>
+<li>a href= - a : anchor, creates links to the same webpage or other webpages. Href: attribute points to the URL for the link</li>
+<li>Footer element appears at the bottom of the page and usually contains the author, copyright, contact, sitemap, and navigation.</li>       
+</ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+    <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+    <li>git checkout main: switches to main branch</li>
+    <li>git add -A: add command adds modifications in the current working branch to the staging area. The -A flag indicates that we want to add all changes. The staging area informs Git that the changes will be added in the next commit.</li>
+    <li>git commit -m "add starter code": commits staged files with a commit message that describes what the commit contains.</li>
+    <li> git pull origin main: git (identifies git command), pull (receive a branch's modifications into the local environment), origin ( indicates the source of the pull will be in the GitHub repo), main (indicates the branch).</li>
+  <li>It's important to always do a git pull to make sure that you have the latest version of the project on your local computer before you start to work.</li>
+<li>git push origin feature/starter-code: the push command pushes the changes we have locally to our remote GitHub branch. You can create a new remote branch or add new changes to an existing branch.</li> 
+</ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your JavaScript notes here</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
