added code to HTML file

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <li>git checkout -b branch-name: creates a new branch and switches to it</li>
     <li>git checkout main: switches to main branch</li>
     <li>git add -A: add command adds modifications in the current working branch to the staging area. The -A flag indicates that we want to add all changes. The staging area informs Git that the changes will be added in the next commit.</li>
-    <li>git commit -m "add starter code": commits staged files with a commit message that describes what the commit contains.</li>
+    <li>git commit -m "add starter code": commits staged files with a commit message that describes what the commit contains. -m flag to associate a message with our commit. </li>
     <li> git pull origin main: git (identifies git command), pull (receive a branch's modifications into the local environment), origin ( indicates the source of the pull will be in the GitHub repo), main (indicates the branch).</li>
   <li>It's important to always do a git pull to make sure that you have the latest version of the project on your local computer before you start to work.</li>
 <li>git push origin feature/starter-code: the push command pushes the changes we have locally to our remote GitHub branch. You can create a new remote branch or add new changes to an existing branch.</li> 
