added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -35,8 +36,17 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
-        </ul>
+          <li>Inline CSS: style element directly in HTML file. Inline styles apply to a specific HTML tag, using a style attribute with a CSS rule to style a particular page element only. Useful for quick permanent changes, less flexible than external/internal style sheets because each inline style must be edited individually whenever you make a design change. </li>
+<li>Internal Style Sheet: contains CSS rules for the webpage in the head section of the HTML file using `style` element. Rules only apply to that page and can configure CSS classes and IDs to style multiple elements in the page code.</li>
+<li>External CSS Style Sheet: Preferred method because it allows developers to keep all CSS rules in a seperate sheet. File is linked with `link` element placed in HTMLs `head` element. </li>   
+<li>Declaration: contain two important components: the CSS property we want to apply and the value of the property.</li>    
+<li>Margin Property: property indicates how much space we want around the outside of an element. When set to 0, we are indicating that we want NO extra space around the element.</li> 
+<li>Padding Property: adds space around the content inside an element. When padding is increased, makes element bigger because the padding, while transparent, is located inside the element, whereas the margin is the transparent buffer outside an element.</li>
+<li>Wild Card Symbol or * is used to apply a rule to all the elements visible on the page.</li>
+<li>Two selectors can be combined into one CSS rule by seperating selectors with a comma.</li>
+<li>Link element: creates connection to external file. Rel Attribute: specifies the relationship between the current document and the linked document resource. href attribute: specifies the location (URL) of the external resource. </li>
+<li>Card: designates this as a class selector. Any HTML element assigned to the class, card, will gain these property assignments from the CSS.</li>
+</ul>
       </section>
    
       <section class="card" id="git-section">
