added functions to for loop and if statement

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
           <li>Array: a single variable that is used to hold a group of data. A single array can store different types of data, such as strings, numbers, and so on. </li>
           <li>For loop uses the predictable pattern of indices to perform a task on all the items in an array by allowing a single code block to be executed over and over.</li>
           <li>Commenting out code makes it inactive without deleting it, just in case you need it later</li>
+          <li>Function is simply a set of instructions that tells the computer how to perform a certain task.</li>
         </ul>
       </section>
     </main>
